--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport">
   <title>Portfolio</title>
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
   <link rel="stylesheet" href="dist/css/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -35,7 +36,7 @@
     <img src="img/logos/php.png" alt="php">
   </section>
   <section id="work">
-    <p>Portfolio</p>
+    <p>PORTFOLIO</p>
     <div class="grid-container">
       <!-- Filled dynamically -->
       <template id="website-preview-template">
