Added more to portfolio

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
   <div class="navbar">
     <a href="#landing">Home</a>
-    <a href="#work">Portfolio</a>
-    <a href="http://resume.pstoebenau.ml">Resume</a>
+    <a href="#portfolio">Portfolio</a>
+    <a href="#contact">Contact</a>
   </div>
   <section id="landing">
     <p id="big-name">PATRICK STOEBENAU</p>
@@ -25,8 +25,8 @@
     <div class="navbar-background"></div>
     <div class="navbar">
       <a href="#landing">Home</a>
-      <a href="#work">Portfolio</a>
-      <a href="http://resume.pstoebenau.ml">Resume</a>
+      <a href="#portfolio">Portfolio</a>
+      <a href="#contact">Contact</a>
     </div>
   </div>
   <section id="tech">
@@ -35,13 +35,15 @@
     <img src="img/logos/nodejs.png" alt="nodejs">
     <img src="img/logos/php.png" alt="php">
   </section>
-  <section id="work">
+  <section id="portfolio">
     <p>PORTFOLIO</p>
     <div class="grid-container">
       <!-- Filled dynamically -->
       <template id="website-preview-template">
         <div class="website-preview">
-          <img src="img/websites/bicbacboe.jpg" alt="">
+          <a href="">
+            <img src="img/websites/bicbacboe.jpg" alt="">
+          </a>
         </div>
       </template>
     </div>
