--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport">
   <title>Portfolio</title>
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <link rel="stylesheet" href="dist/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
@@ -47,6 +47,20 @@
         </div>
       </template>
     </div>
+  </section>
+  <section id="contact">
+    <div id="contact-info">
+      <h1>Let's Get in Touch</h1>
+      <p>Name: Patrick Stoebenau</p>
+      <p>Email: <a href="mailto:pstoebenau@knights.ucf.edu">pstoebenau@knights.ucf.edu</a></p>
+      <p>Phone: <a href="tel:+1-407-406-7925">(407)-406-7925</a></p>
+      <p>Github: <a href="https://github.com/pstoebenau">github.com/pstoebenau</a></p>
+      <p>Gitlab: <a href="https://gitlab.com/pstoebenau">gitlab.com/pstoebenau</a></p>
+      <p>Resume: <a href="https://resume.pstoebenau.ml">resume.pstoebenau.ml</a></p>
+    </div>
+    <form id="contact-form">
+      
+    </form>
   </section>
   <script src="js/index.js"></script>
 </body>
