--- a/index.html
+++ b/index.html
@@ -65,16 +65,16 @@
       </div>
       <form id="contact-form">
         <label for="fname" required>First Name *</label>
-        <input type="text" required id="fname" name="entry.146756468" placeholder="John">
+        <input type="text" required name="entry.146756468" placeholder="John">
         <label for="lname">Last Name *</label>
-        <input type="text" required id="lname" name="entry.1565109759" placeholder="Watson">
+        <input type="text" required name="entry.1565109759" placeholder="Watson">
         <label for="email">Email *</label>
         <input type="email" required name="entry.1112572281" placeholder="jwatson@example.com">
         <label for="phone">Phone Number</label>
-        <input type="text" id="phone" name="entry.587981600" placeholder="555-555-5555">
+        <input type="text" name="entry.587981600" placeholder="555-555-5555">
         <label for="feedback">Contact Reason *</label>
         <textarea required name="entry.1138540646"></textarea>
-        <input type="submit" name="submit" value="Submit">
+        <input type="submit" id="submit-button" name="submit" value="Submit">
       </form>
     </div>
   </section>
