--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <a href="#landing">Home</a>
     <a href="#portfolio">Portfolio</a>
     <a href="#contact">Contact</a>
-    <a href="https://resume.pstoebenau.tk">Resume</a>
+    <a href="https://resume.pstoebenau.ml">Resume</a>
   </template>
   <div class="navbar"></div>
   <section id="landing">
@@ -56,7 +56,7 @@
           <p>Phone: <a href="tel:+1-407-406-7925">(407)-406-7925</a></p>
           <p>Github: <a href="https://github.com/pstoebenau">github.com/pstoebenau</a></p>
           <p>Gitlab: <a href="https://gitlab.com/pstoebenau">gitlab.com/pstoebenau</a></p>
-          <p>Resume: <a href="https://resume.pstoebenau.tk">resume.pstoebenau.tk</a></p>
+          <p>Resume: <a href="https://resume.pstoebenau.ml">resume.pstoebenau.ml</a></p>
         </div>
       </div>
       <form id="contact-form">
